Revision history for Bot::IRC::X::Feeds

{{$NEXT}}

1.02      2016-12-15 09:27:23-08:00 America/Los_Angeles
        - Ability to remove all watched/tracked feeds at once
        - Fix channel-specific feed item reporting

1.01      2016-12-06 09:12:59-08:00 America/Los_Angeles
        - First version, released on an unsuspecting world